<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.nexacro</groupId>
    <artifactId>orderBoard</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <name>uiadapter-spring-sample</name>
    <url>http://maven.apache.org</url>
    <description>Description of nexacroN-spring-sample</description>

    <properties>
        <jdk.version>1.8</jdk.version>
        <spring.version>5.2.16.RELEASE</spring.version>
        <slf4j.version>1.7.25</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <encoding>UTF-8</encoding>
        <nexacro.uiadapter.version>1.0.1-SNAPSHOT</nexacro.uiadapter.version>
        <aspectj.version>1.9.5</aspectj.version>
    </properties>    
 
	<repositories>
       <repository>
            <id>tobesoft</id>
            <url>http://mangosteen.tobesoft.co.kr/nexus/repository/maven-public/</url>
            
            <!-- 
            <url>http://20.200.204.180/nexus/repository/maven-public/</url>
            <url>http://mangosteen.tobesoft.co.kr/nexus/repository/tobesoft-snapshots/</url>
             -->
            <releases>
                <!-- <updatePolicy>never</updatePolicy>  -->
            </releases>
            <snapshots>
                <!-- <updatePolicy>never</updatePolicy>  -->
            </snapshots>
        </repository>
       <!-- 
	   <repository>
            <id>tobesoft</id>
            <url>http://localhost:8081/repository/tobesoft-snapshots/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
         -->
		<repository>
			<id>mvn2</id>
			<url>https://repo1.maven.org/maven2/</url>
			<releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
            </snapshots>
		</repository>
		<repository>
		    <id>mesir-repo</id>
		    <url>http://mesir.googlecode.com/svn/trunk/mavenrepo</url>
		</repository>
	</repositories>

    
    <dependencies>
        <!--   nexacroN LIBRARY  -->
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-core</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-dataaccess</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        
        <dependency>
            <groupId>com.nexacro</groupId>
            <artifactId>uiadapter-spring-excel</artifactId>
            <version>${nexacro.uiadapter.version}</version>
        </dependency>
        
        <!--   SPRINGFRAMEWORK LIBRARY  -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>${spring.version}</version>
        </dependency>
		<!-- spring-jcl -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-jcl</artifactId>
		    <version>${spring.version}</version>
		</dependency>
        
        <!--   SERVLET LIBRARY  -->
        <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
          <version>4.0.1</version>
          <scope>provided</scope>
        </dependency>
        
        <dependency>
          <groupId>javax.servlet.jsp</groupId>
          <artifactId>javax.servlet.jsp-api</artifactId>
          <version>2.3.3</version>
          <scope>provided</scope>
        </dependency>
        
        <!--   MYBATIS LIBRARY  -->
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>2.0.5</version>
        </dependency>
        
        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis</artifactId>
            <version>3.5.5</version>
        </dependency>

        <!--   LOGGING LIBRARY  -->
        <!-- slf4j for logging included slf4j-api.jar -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        
        <!-- interwork commons-logging & slf4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        
        <!-- interwork log4j & slf4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        
        <!-- jdbc logging  -->
        <dependency>
		    <groupId>org.lazyluke</groupId>
		    <artifactId>log4jdbc-remix</artifactId>
		    <version>0.2.7</version>
           <exclusions>
                <exclusion>
                     <groupId>junit</groupId>
                     <artifactId>junit</artifactId>
                </exclusion>
                <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
           </exclusions>
		</dependency>

		<dependency>
		    <groupId>com.zaxxer</groupId>
		    <artifactId>HikariCP</artifactId>
		    <version>3.1.0</version>
		</dependency>
        
        <!-- hsqldb driver -->
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.5.1</version>
        </dependency>
        <!-- MariaDB -->
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.6.2</version>
        </dependency>    
        
        <!--  aop -->
        <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjweaver</artifactId>
          <version>${aspectj.version}</version>
        </dependency>
        
        <!-- check validate -->
        <dependency>
			<groupId>org.hibernate.validator</groupId>
       	 	<artifactId>hibernate-validator</artifactId>
        	<version>6.0.8.Final</version>
		</dependency>

        
        <!--   TEST LIBRARY  -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- 
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>
         -->
         
		<!--로그 라이브러리 추가-->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.0.1</version>
		</dependency>
		
		<!--oracle jdbc 라이브러리 추가 -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>19.8.0.0</version>
		</dependency>
		                <!-- 	mysql db연동 -->
        <dependency>
		    <groupId>mysql</groupId>
		    <artifactId>mysql-connector-java</artifactId>
		    <version>8.0.14</version>
		</dependency>
		
    </dependencies>
    
    <build>
        <defaultGoal>install</defaultGoal>
        <!-- 
        <defaultGoal>package</defaultGoal>
         -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <directory>${basedir}/target</directory>
	    <extensions>
	      <extension>
	        <groupId>org.apache.maven.archetype</groupId>
	        <artifactId>archetype-packaging</artifactId>
	        <version>2.2</version>
	      </extension>
	    </extensions>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <pluginManagement>
            <plugins>
		        <plugin>
		          <groupId>org.apache.maven.plugins</groupId>
		          <artifactId>maven-archetype-plugin</artifactId>
		          <version>2.2</version>
		          <extensions>true</extensions>
		        </plugin>
                <plugin>
                    <groupId>org.apache.tomcat.maven</groupId>
                    <artifactId>tomcat7-maven-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <port>80</port>
                        <path>/</path>
                        <systemProperties>
                            <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
                        </systemProperties>
                    </configuration>
                </plugin>
                <!-- deploy plugin 설정 -->
				<plugin>
				   <groupId>org.sonatype.plugins</groupId>
				   <artifactId>nexus-staging-maven-plugin</artifactId>
				   <version>1.5.1</version>
				   <executions>
				      <execution>
				         <id>default-deploy</id>
				         <phase>deploy</phase>
				         <goals>
				            <goal>deploy</goal>
				         </goals>
				      </execution>
				   </executions>
				   <configuration>
				      <serverId>dev-tobesoft-snapshots</serverId>
				      <skipStaging>true</skipStaging>
				   </configuration>
				</plugin>
                <!-- Compiler 설정 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.2</version>
                    <configuration>
                        <source>${jdk.version}</source>
                        <target>${jdk.version}</target>
                        <fork>true</fork>
                        <meminitial>1024m</meminitial>
                        <maxmem>1024m</maxmem>
                        <encoding>${encoding}</encoding>
                    </configuration>
                </plugin>
                <!-- war 설정 
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                    </configuration>
                </plugin>
                -->
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-deploy-plugin</artifactId>
				    <version>3.0.0-M1</version>
                    <configuration>
                        <forkCount>1</forkCount>
                        <reuseForks>false</reuseForks>
                    </configuration>
				    <executions>
				        <execution>
				            <id>deploy-jar-file</id>
				            <phase>deploy</phase>
				            <goals>
				                <goal>deploy-file</goal>
				            </goals>
				        </execution>
				    </executions>
				</plugin>
				<!-- 
				<plugin>
	                  <groupId>org.apache.maven.plugins</groupId>
	                  <artifactId>maven-surefire-plugin</artifactId>
	                  <version>2.22.0</version>
	                  <configuration>
	                      <forkCount>3</forkCount>
	                      <reuseForks>true</reuseForks>
	                  </configuration>
                </plugin>
                 -->
                <plugin>
                    <groupId>org.maven.ide.eclipse</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>0.9.9-SNAPSHOT</version>
                    <configuration>
                        <mappingId>generic</mappingId>
                        <configurators></configurators>
                        <mojoExecutions></mojoExecutions>
                    </configuration>
                </plugin>
                <!-- JavaDoc -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <!-- local server 
	<distributionManagement>    
	    <repository>
	      <id>${nexus3oss.env}-tobesoft-releases</id>
	      <name>tobesoft-releases</name>
	      <url>${nexus3oss.url}/repository/tobesoft-releases/</url>
	    </repository>
	    <snapshotRepository>
	      <id>${nexus3oss.env}-tobesoft-snapshots</id>
	      <name>tobesoft-snapshots</name>
	      <url>${nexus3oss.url}/repository/tobesoft-snapshots/</url>
	    </snapshotRepository>
	</distributionManagement>  
	-->
</project>
